# gy521-gesture-engine

./: .gitignore  CMakeLists.txt  FeaturePipeline.h  README.md
edge-impulse-sdk/: README.txt
edge-impulse-sdk/model-parameters/: model_metadata.h  model_variables.h
edge-impulse-sdk/tflite-model/: tflite_learn_1049225_4_compiled.cpp  tflite_learn_1049225_4_compiled.h
main/: CMakeLists.txt  IMUSensor.cpp  ei_platform.cpp  mai  main.cpp
main/include/: FeaturePipeline.h  IMUSensor.h  InferenceEngine.h
